--- a/.gitignore
+++ b/.gitignore
@@ -22,10 +22,6 @@ yarn-error.log
 
 # Visual Studio Code
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
 .history/*
 
 # Miscellaneous
@@ -41,3 +37,9 @@ __screenshots__/
 # System files
 .DS_Store
 Thumbs.db
+
+# Environment variables and API keys
+.env
+.env.local
+.env.*.local
+public/assets/config.json
